changed colors to improve readability; fixed slow change between country and global mode; added button which scrolls to the graphs section

--- a/src/components/CumulativeGraph/style.module.css
+++ b/src/components/CumulativeGraph/style.module.css
@@ -1,9 +1,11 @@
 .chart-wrapper{
     margin: 0 auto;
-    margin-top: 80px;
+    margin-top: 60px;
     padding: 0 20px;
     height: 300px;
     position: relative;
+    box-sizing: border-box;
+    padding-top: 10px;
 }
 
 .spinner-wrapper{
