--- a/src/components/Navbar/style.module.css
+++ b/src/components/Navbar/style.module.css
@@ -7,6 +7,10 @@
     transition: all 0.3s;
 }
 
+.navbar h1{
+    margin: 10px auto;
+}
+
 .sticky{
     -webkit-box-shadow: 0px 10px 18px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 10px 18px -1px rgba(0,0,0,0.75);
@@ -15,18 +19,58 @@
 
 .navbar-bottom{
     display: flex;
-    /* justify-content: space-between; */
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 50%;
     margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 .name-wrapper{
     display: flex;
     align-items: center;
+    white-space: nowrap;
 }
 
 .name-wrapper img{
     height: 2em;
     margin-right: 10px;
+}
+
+.graphs-button{
+    display: flex;
+    align-items: center;
+}
+
+.graphs-button i{
+    font-size: 2em;
+    margin-right: 5px;
+}
+
+.button-link{
+    text-decoration: none;
+    color: rgb(116, 192, 255);
+    transition: color 0.2s;
+}
+
+.button-link:hover{
+    color: rgb(0, 140, 255);
+}
+
+@media screen 
+  and (max-device-width: 500px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    .navbar h1{
+        font-size: 3rem;
+    }
+
+    .navbar h2{
+        font-size: 2.7rem;
+    }
+
+    .navbar i{
+        font-size: 2.7rem!important;
+    }
 }
